tests/NormalTests/paczka1/small_fuzzy/68052882.err
Error in line 7: mzxiuUg S757 4#,9
Error in line 1: TgGUz6 S547 47,9
Error in line 10: ZLasnxnCL S547 87,7
Error in line 14: S547 S412 -2,4
Error in line 9: mzxiuUg S757 2,1
